--- a/css_advanced/index.html
+++ b/css_advanced/index.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/4a2b055604.js" crossorigin="anonymous"></script>
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
-    
-</head>
-<body>
-  <div class="box">
-    <div class="header">
-      <div class="logo">
-        <img src="images/logo.png" alt="logo" class="smile-school">
-      </div>
-    </div>
-    <div class="menu">
-      <div class="text-wrapper">COURSES</div>
-      <div class="div">PRICING</div>
-      <div class="text-wrapper-2">  LOGIN</div>
-    </div>
-  </div>
+  </head>
+  <body>
     <div class="main-part">
       <div class="overlap">
+        <div class="box">
+          <header class="header">
+           <div class="logo">
+             <img src="./images/logo.png" alt="logo" class="smile-school">
+           </div>
+            <div class="menu">
+              <div class="text-wrapper">COURSES</div>
+              <div class="div">PRICING</div>
+              <div class="text-wrapper-2"> LOGIN </div>
+            </div>
+          </header>
+        </div>
         <div class="overlap-group">
           <div class="text-wrapper">Get schooled</div>
           <div class="div">SMILES</div>
@@ -65,6 +64,142 @@
         </div>
       </div>
     </div>
-
+    <div class="box">
+      <div class="part-testimonials">
+        <div class="overlap-group">
+          <img src="./images/5.png" alt="" class="avatar">
+          <div class="text">
+            <div class="text-wrapper">weather presenter</div>
+            <div class="div">Person Name</div>
+            <p class="those-tutorials-ar">
+              « Those tutorials are concise and go straight to the point. I can't think of a better place to learn smiling. And it's so fun! »
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="part-tutorials">
+      <p class="most-popular-tutoria">
+        <span class="text-wrapper">Most</span>
+        <span class="span">popular</span>
+        <span class="text-wrapper-2">&nbsp;</span>
+        <span class="text-wrapper">tutorials</span>
+      </p>
+      <div class="tuto">
+        <div class="overlap-group">
+          <img src="./images/1.png" alt="Phillip Massey" class="avatar">
+          <div class="div">Phillip Massey</div>
+          <div class="text-wrapper-3">8 min</div>
+          <img src="./images/rating.png" alt="rating" class="rating">
+          <p class="lorem-ipsum-dolor-si">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+          <div class="text-wrapper-4">Diagonal Smile</div>
+          <div class="overlap"><img src="./images/play.png" alt="play button" class="play"></div>
+        </div>
+      </div>
+      <div class="overlap-wrapper">
+        <div class="overlap-group">
+          <img src="./images/1.png" alt="Phillip Massey" class="avatar">
+          <div class="div">Phillip Massey</div>
+          <div class="text-wrapper-3">8 min</div>
+          <img src="./images/rating.png" alt="rating" class="rating">
+          <p class="lorem-ipsum-dolor-si">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <div class="text-wrapper-4">Sad Smile</div>
+          <div class="play-wrapper"><img src="./images/play.png" alt="play button" class="play"></div>
+        </div>
+      </div>
+      <div class="overlap-group-wrapper">
+        <div class="overlap-group">
+          <img src="./images/1.png" alt="Phillip Massey" class="avatar">
+          <div class="div">Phillip Massey</div>
+          <div class="text-wrapper-3">8 min</div>
+          <img src="./images/rating.png" alt="rating" class="rating">
+          <p class="lorem-ipsum-dolor-si">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+          <div class="text-wrapper-4">Natural Smile</div>
+          <div class="img-wrapper"><img src="./images/play.png" alt="play button" class="play"></div>
+        </div>
+      </div>
+      <div class="div-wrapper">
+        <div class="overlap-group">
+          <img src="./images/1.png" alt="Phillip Massey" class="avatar">
+          <div class="div">Phillip Massey</div>
+          <div class="text-wrapper-3">8 min</div>
+          <img src="./images/rating.png" alt="rating" class="rating">
+          <p class="lorem-ipsum-dolor-si">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+          <div class="text-wrapper-4">Happy Smile</div>
+          <div class="overlap-group-2"><img src="./images/play.png" alt="play button" class="play"></div>
+        </div>
+      </div>
+    </div>
+    <div class="part-free">
+      <p class="free-membership">
+        <span class="text-wrapper">Free</span>
+        <span class="span">&nbsp;</span>
+        <span class="text-wrapper-2">membership</span>
+      </p>
+      <button class="button">
+        <div class="overlap-group"><div class="div">REGISTER FOR FREE</div></div>
+      </button>
+      <div class="dot">
+        <p class="lorem-ipsum-dolor-si">Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
+        <div class="text-wrapper-3">Lorem ipsum</div>
+        <img src="./images/smile.png" alt="Smile logo" class="smile">
+      </div>
+      <div class="dot-2">
+        <p class="p">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        <div class="text-wrapper-3">Lorem ipsum</div>
+        <img src="./images/smile.png" alt="Smile logo" class="smile">
+      </div>
+      <div class="dot-3">
+        <p class="lorem-ipsum-dolor-si-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. </p>
+        <div class="text-wrapper-3">Lorem ipsum</div>
+        <img src="./images/smile.png" alt="Smile logo" class="smile">
+      </div>
+      <div class="dot-4">
+        <p class="lorem-ipsum-dolor-si-2">Lorem ipsum, dolor sit amet consectetur adipisicing elit. </p>
+        <div class="text-wrapper-3">Lorem ipsum</div>
+        <img src="./images/smile.png" alt="Smile logo" class="smile">
+      </div>
+    </div>
+    <div class="part-FAQ">
+      <div class="text-wrapper">F.A.Q</div>
+      <div class="q">
+        <p class="lorem-ipsum-dolor-si">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos ipsam itaque illo alias deserunt cum est corporis reiciendis consequatur labore. Tenetur quos laudantium corporis commodi itaque dolorem eveniet laborum nam.
+        </p>
+        <div class="div">How does this work?</div>
+      </div>
+      <div class="q-2">
+        <p class="lorem-ipsum-dolor-si">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos ipsam itaque illo alias deserunt cum est corporis reiciendis consequatur labore. Tenetur quos laudantium corporis commodi itaque dolorem eveniet laborum nam.
+        </p>
+        <div class="div">How does this work?</div>
+      </div>
+      <div class="q-3">
+        <p class="lorem-ipsum-dolor-si">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos ipsam itaque illo alias deserunt cum est corporis reiciendis consequatur labore. Tenetur quos laudantium corporis commodi itaque dolorem eveniet laborum nam.
+        </p>
+        <div class="div">How does this work?</div>
+      </div>
+      <div class="q-4">
+        <p class="lorem-ipsum-dolor-si">
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eos ipsam itaque illo alias deserunt cum est corporis reiciendis consequatur labore. Tenetur quos laudantium corporis commodi itaque dolorem eveniet laborum nam.
+        </p>
+        <div class="div">How does this work?</div>
+      </div>
+    </div>
+    <div class="part-footer">
+      <div class="overlap-group">
+        <div class="logo">
+          <div class="text-wrapper">SmileSchool</div>
+          <img src="./images/smile.png" alt="" class="smile">
+        </div>
+        <div class="div">&#169;smileschool 2020</div>
+        <div class="social-icons">
+          <img src="./images/instagram.svg" alt="Instagram logo" class="instagram">
+          <img src="./images/twitter.svg" alt="Twitter logo" class="twitter">
+          <img src="./images/facebook1.svg" alt="facebook" class="facebook">
+        </div>
+      </div>
+    </div>
   </body>
-</html>
+  </html>
