--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+ <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link href="base.css" rel="stylesheet">
-  <link href="styles.css" rel="stylesheet">
+  <link href="base.css" rel="stylesheet" />
+  <link href="styles.css" rel="stylesheet" />
+  <title>Home - My Portfolio</title>
+</head>
+
 
   <title>Home - My Portfolio</title>
 </head>
-<body>
-
-  <header>
+<body class="works_on_smartphone">
+ <header>
     <ul>
       <li><a href="index.html">Home</a></li>
       <li><a href="tweets.html">Tweets</a></li>
